--- a/src/layouts/custom.css
+++ b/src/layouts/custom.css
@@ -5,17 +5,21 @@ html {
   font-family: 'Karla', sans-serif !important;
 }
 
+body {
+  position: relative;
+}
+
 .page-wrapper {
   width: 100vw;
   height: 100vh;
 }
 
-.active {
-  padding-bottom: 5px;
-  border-bottom: 5px #6464FF solid;
+.inner-wrapper {
+  width: 100%;
 }
 
-.menu-item:hover {
-  padding-bottom: 5px;
-  border-bottom: 5px #b264ff solid;
+.menu-title {
+  color: #FFFFFF;
+  font-size: 20px;
+  line-height: 50px;
 }
